# mio-serial

./: .gitignore  .travis.yml  CHANGELOG.asciidoc  CHANGELOG.md  Cargo.toml  Cross.toml  LICENSE  README.md  appveyor.yml
.github/workflows/: github-ci.yml
async-serial-test-helper/: Cargo.toml  README.md
async-serial-test-helper/src/: lib.rs
ci/: install.sh
ci/docker/aarch64-unknown-linux-gnu/: Dockerfile
ci/docker/arm-unknown-linux-gnueabi/: Dockerfile
ci/docker/armv7-unknown-linux-gnueabihf/: Dockerfile
ci/docker/i686-unknown-linux-gnu/: Dockerfile
ci/docker/i686-unknown-linux-musl/: Dockerfile
ci/docker/mips-unknown-linux-gnu/: Dockerfile
ci/docker/mipsel-unknown-linux-gnu/: Dockerfile
ci/docker/powerpc-unknown-linux-gnu/: Dockerfile
ci/docker/x86_64-unknown-linux-gnu/: Dockerfile
ci/docker/x86_64-unknown-linux-musl/: Dockerfile
examples/: read_serialport.rs  serial_printline.rs  serial_raw_printline.rs
src/: lib.rs  posix.rs  test.rs  unix.rs  windows.rs
tests/: common.rs  test_builder_extension.rs  test_from_blocking_serialport.rs  test_open.rs  test_port_enumeration.rs  test_serialstream.rs  test_stream_io.rs  test_stream_pair.rs  test_unix.rs
