[package]
name = "mio-serial"
version = "5.0.2"
authors = ["Zac Berkowitz <zac.berkowitz@gmail.com>"]
description = "A serial port implementation for mio"
license = "MIT"
homepage = "https://github.com/berkowski/mio-serial"
repository = "https://github.com/berkowski/mio-serial"
documentation = "http://docs.rs/mio-serial"
readme = "README.md"
keywords = ["rs232", "serial", "mio"]
categories = ["asynchronous", "hardware-support"]
edition = "2018"

[package.metadata]
msrv = "1.46.0"    # Used by cargo-msrv

[features]
default = []
libudev = ["serialport/libudev"]

[dependencies.mio]
version = "0.8"
features = ["os-poll", "os-ext"]

[dependencies.serialport]
version = "4"
default-features = false

[dependencies.log]
version = "0.4"

[target.'cfg(unix)'.dependencies]
nix = "0.23"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["commapi", "handleapi", "winbase"] }

[dev-dependencies.env_logger]
version = "0.9"

[[example]]
name = "read_serialport"
